fixing images stretching issues for different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -187,12 +187,14 @@ main {
 
             img {
                 width: 40%;
+                height: auto;
                 border-radius: 2rem;
                 animation: float 10s ease-in-out infinite;
+                object-fit: cover;
             }
 
             figcaption {
-                font-size: 2rem;
+                font-size: 3vw;
             }
         }
 
@@ -213,11 +215,26 @@ footer {
     padding: 1rem;
 }
 
-@media (max-width: 600px) {
-    .nav-list {
-        flex-wrap: wrap;
-        gap: 0;
-        padding: 0.6rem 1rem;
+@media (max-width: 700px) {
+    main {
+
+        #intro {
+
+            figure {
+                flex-direction: column;
+                align-items: center;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                figcaption {
+                    font-size: 1rem;
+                    text-align: center;
+                }
+            }
+        }
     }
 }
 
